--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="shortcut icon" href="<%= BASE_URL %>faviconSila.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
